--- a/mandela_effect.org
+++ b/mandela_effect.org
@@ -572,3 +572,21 @@ width="512" data-original="https://pic1.zhimg.com/v2-1959405ee89645dab9190017ea5
 以前是“斯”，现在是“是”！！！！
 
 https://tieba.baidu.com/p/6441446783?pn=1
+
+
+
+骑的读音变了：
+坐骑：zuo ji -> zuo qi
+
+
+钉的输入法读音变了：
+读音还是ding，但是输入法变为din
+
+
+
+共产党第一个武装起义地点：
+
+武昌 -> 南昌
+
+详见搜索：
+武昌起义 建军大业
